@@ -2051,12 +2051,12 @@ pm-selenium-sulfur-battery-mk2-equipment=Selenium-sulfur battery equipment MK2
 pm-RTG-equipment=RTG equipment
 
 [achievement-name]
-pm-jesus-marie-theyre-minerals=Jesus Marie! They're minerals!
 pm-use-more-gun=Use more gun
+pm-legacy-code=Legacy code
 
 [achievement-description]
-pm-jesus-marie-theyre-minerals=Produce your first bismuth crystal.
 pm-use-more-gun=Use your first combat bot.
+pm-legacy-code=Research something using noble gas science packs without unlocking processing units.
 
 [fuel-category-name]
 pm-oxidiser=Oxidiser
